Fixed bug of page not being covered on empty user reviews

--- a/StraightUp/app/assets/stylesheets/dashboard.scss
+++ b/StraightUp/app/assets/stylesheets/dashboard.scss
@@ -28,3 +28,13 @@
 	justify-content: center;
 	align-items: center;
 }
+.user--empty-dashboard {
+	display: inherit;
+	height: -webkit-fill-available;
+	width: 100%;
+	background: #f0ead6;
+	color: white;
+	z-index: 1;
+	justify-content: center;
+	align-items: center;
+}
